tests/invalid/any_non_list/main.py
def run_case() -> None:
    x: bool = any(1)

if __name__ == "__main__":
    run_case()
